--- a/homepage.html
+++ b/homepage.html
@@ -1,53 +1,187 @@
 <!DOCTYPE html>
-<html lang="en"><head>
-<meta charset="utf-8">
-<title>HOME PAGE</title>
-<meta name="keywords" content="example, JavaScript Form Validation, Sample registration form" />
-<meta name="description" content="This document is an example of JavaScript Form Validation using a sample registration form. " />
-<link rel='stylesheet' href='MORD4.css' type='text/css' />
-<script src="time.js"></script>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {box-sizing: border-box}
+body {font-family: Verdana, sans-serif; margin:0}
+.mySlides {display: none}
+img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .prev, .next,.text {font-size: 11px}
+}
+</style>
+<script src="time.js"></script
 </head>
-<h1>Malonje</h1>
-    <script src="malonje.js"></script>
-<body onload="document.registration.userid.focus();">
-This is the second project and web designed by Mordecai Wyson Chikalo, Student at Mzuzu university student registration number (BEDICT0121).
-you may use the following form to get in contact with Mordecai Wyson Chikalo.
-<p>Here are links to the pages that contains related to this home page.</p>
-<p><a href= "skills.html">My skills</a></p>
-<h1>CLIENT FORM FOR CONTACT</h1>
-<form name='registration' onSubmit="return formValidation();">
-<ul>
-<li><label for="userid">User id:</label></li>
-<li><input type="INT" name="userid" size="12" /></li>
-<li><label for="passid">Password:</label></li>
-<li><input type="password" name="passid" size="4" /></li>
-<li><label for="username">Name:</label></li>
-<li><input type="text" name="username" size="12" /></li>
-<li><label for="address">Address:</label></li>
-<li><input type="text" name="address" size="50" /></li>
-<li><label for="country">UNIVERSITY:</label></li>
-<li><select name="UNIVERSITY">
-<option selected="" value="Default">(Please select your university)</option>
-<option value="AF">MZUZU UNIVERSITY</option>
-<option value="AL">LILONGWE UNIVERSITY OF NATURAL RESOURCES</option>
-<option value="DZ">MALAWI UNIVERSITY OF BUSSINESS AND APPLIED SCIENCE</option>
-<option value="AS">UNIVERSITY OF MALAWI</option>
-<option value="AD">KAMUDZU UNIVERSITY OF HEALTH SCIENCES</option>
-</select></li>
-<li><label for="zip">ZIP Code:</label></li>
-<li><input type="Int" name="zip" /></li>
-<li><label for="email">Email:</label></li>
-<li><input type="text" name="email" size="50" /></li>
-<li><label id="gender">Sex:</label></li>
-<li><input type="radio" name="msex" value="Male" /><span>Male</span></li>
-<li><input type="radio" name="fsex" value="Female" /><span>Female</span></li>
-<li><label>Language:</label></li>
-<li><input type="checkbox" name="en" value="en" checked /><span>English</span></li>
-<li><input type="checkbox" name="nonen" value="noen" /><span>chichewa</span></li>
-<li><label for="desc">About:</label></li>
-<li><textarea name="desc" id="desc"></textarea></li>
-<li><input type="submit" name="submit" value="Submit" /></li>
-</ul>
-</form>
+<body>
+<h2>student ID verification </h2>
+
+<p>Please enter student ID:</p>
+
+<input id="numb">
+
+<button type="button" onclick="myFunction()">Submit</button>
+
+<p id="demo"></p>
+<p><a href= "contact.html"> CONTACT US</a></p>
+<script>
+function myFunction() {
+  // Get the value of the input field with id="numb"
+  let x = document.getElementById("numb").value;
+  // If x is Not a Number or less than one or greater than 10
+  let text;
+  if (isNaN(x) || x < 1000 || x > 9999) {
+    text = "sudent invalid";
+  } else {
+    text = "student ID Verified";
+  }
+  document.getElementById("demo").innerHTML = text;
+}
+</script>
+
+<div class="slideshow-container">
+
+<div class="mySlides fade">
+  <div class="numbertext">1 / 3</div>
+  <img src="hi.jpg" style="width:100%">
+  <div class="text">Demostration that lead to suspension of some students</div>
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">2 / 3</div>
+  <img src="ph.jpg" style="width:100%">
+  <div class="text">Image of my favarite field (public health)</div>
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">3 / 3</div>
+  <img src="mzuni1.jpg" style="width:100%">
+  <div class="text">Essap buildings</div>
+</div>
+
+<a class="prev" onclick="plusSlides(-1)">❮</a>
+<a class="next" onclick="plusSlides(1)">❯</a>
+
+</div>
+<br>
+
+<div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span> 
+  <span class="dot" onclick="currentSlide(2)"></span> 
+  <span class="dot" onclick="currentSlide(3)"></span> 
+</div>
+
+<script>
+let slideIndex = 1;
+showSlides(slideIndex);
+
+function plusSlides(n) {
+  showSlides(slideIndex += n);
+}
+
+function currentSlide(n) {
+  showSlides(slideIndex = n);
+}
+
+function showSlides(n) {
+  let i;
+  let slides = document.getElementsByClassName("mySlides");
+  let dots = document.getElementsByClassName("dot");
+  if (n > slides.length) {slideIndex = 1}    
+  if (n < 1) {slideIndex = slides.length}
+  for (i = 0; i < slides.length; i++) {
+    slides[i].style.display = "none";  
+  }
+  for (i = 0; i < dots.length; i++) {
+    dots[i].className = dots[i].className.replace(" active", "");
+  }
+  slides[slideIndex-1].style.display = "block";  
+  dots[slideIndex-1].className += " active";
+}
+</script>
+
 </body>
-</html>
+</html> 
