--- a/contact.html
+++ b/contact.html
@@ -1,69 +1,39 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta name="mordecai" content="width=device-width, initial-scale=1">
-<style>
-body {font-family: Arial, Helvetica, sans-serif;}
-* {box-sizing: border-box;}
+<!DOTYPE.HTML>
+<HTML>
+<head><TITTLE> ABOUT THE AUTHOR MORDECAI  CHIKALO</TITTLE></head>
+<body TEXT="white" LINK="black" VLINK="red" ALINK="purple" BGColor="blue">
+<img src="m2.jpg" style="display:block;width:30%;margin:auto;">
 
-input[type=text], select, textarea {
-  width: 100%;
-  padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-  margin-top: 6px;
-  margin-bottom: 16px;
-  resize: vertical;
-}
+<p>Lets get in touch. Send me a message:</p>
+Mordecai Wyson Chikalo its a student at Mzuzu university. he is studying Bacholers of education (information Communication Technology) Mordecai its mult-talented person who like discovering things
+ he is diploma holder (public health) Mordecai apart from being profession health practioner Mordecai wyson Chikalo have skills in the following fieldset
+ 
+ <ul> Adobe photoshop</ul>
+ <ul> Adobe premia</ul>
+ <ul> Web designing</ul>
+ To get contact with Mordecai you can fill the below form
+ <center>
+    <form>
+	<TEXT="white" LINK="black" VLINK="red" ALINK="purple" BGColor="blue">
+      <p><input type="text" placeholder="Name" required name="Name"></p>
+      <p><input type="text" placeholder="Email" required name="Email"></p>
+      <p><input type="text" placeholder="Subject" required name="Subject"></p>
+      <p><input type="text" placeholder="Message" required name="Message"></p>
+	  </form>
+	  <input type="submit" value="send message">
+      <p>
+	  </center>
+You can contact also contact him on
 
-input[type=submit] {
-  background-color: #04AA6D;
-  color: white;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
 
-input[type=submit]:hover {
-  background-color: #45a049;
-}
 
-.container {
-  border-radius: 5px;
-  background-color: #f2f2f2;
-  padding: 20px;
-}
-</style>
-</head>
-<body>
-
-<h3>Contact Form</h3>
-
-<div class="container">
-  <form action="/action_mydatabase.php">
-    <label for="firstname">First Name</label>
-    <input type="text" id="firstname" name="firstname" placeholder="Your name..">
-
-    <label for="lname">Last Name</label>
-    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-
-    <label for="country">program</label>
-    <select id="pg" name="select program of study">
-	 <option value="choice">select Program of study</option>
-      <option value="maths">Mathematical sciences</option>
-      <option value="ICT">Information Communication Technnology</option>
-	   <option value="maths">Mathematical sciences</option>
-      <option value="BEDICT">Information Communication Technnology(EDUCATION)</option>
-    </select>
-
-    <label for="subject">Subject</label>
-    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
-
-    <input type="submit" value="Submit">
-  </form>
-</div>
-
+  <footer>
+  <p class="medium">on Whats app <a href="htttp://mordecaichikalo@gamil.com" target="_blank">0885618962</a>
+  <a class="medium">On face book <a href="htttp://facebook.mordecaichikalo.com" target="_blank">Mordecai Chikalo</a></p>
+  <center>
+    <p class="medium">Powered by <a href="mordecaichikalo@gamil.com" target="_blank">dilligent</a></p>
+  
+  </footer>
+  </center>
 </body>
-</html>
+</HTML>
