--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
  </center>
  </h1>
  <p>
- Mordecai Wyson Chikalo its upcoming Web developer. he is student at ......................... if you want to know about the developer click on the here
-<a href= "contact.html"> CONTACT US</a></p>
+ Mordecai Wyson Chikalo its upcoming Web developer. he is student at Mzuzu university if you want to know about the developer click on the here
 
-<p><a href= "about.html">ABOUT US</a></p>
-<p><a href= "sample.html">SAMPLE IMAGES</a></p>
-<p><a href= "contact.html"> CONTACT US</a></p>
+<p><a href= "contact.html"> CONTACT US</a> This is contains developer contact detail as footer note as well as contact form that user can send to
+ <em>Mordecai Chikalo</em> it does not accept blank space.</p>
 </body>
 </HTML>
