--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,19 @@ Mordecai Wyson Chikalo its a student at Mzuzu university. he is studying Bachole
  <ul> Adobe photoshop</ul>
  <ul> Adobe premia</ul>
  <ul> Web designing</ul>
+ 
+ <TABLE BORDER=”2″>
+<TR>
+<TD>WEB DISEGN</TD>
+<TD>PHOTOGRAPHY</TD>
+<TD>WEB MAINTANCE</TD>
+</TR>
+<TR>
+<TD>500000</TD>
+<TD>1000/picture </TD>
+<TD>300000</TD>
+</TR>
+</TABLE>
  To get contact with Mordecai you can fill the below form
  <center>
     <form>
