--- a/myport.HTML
+++ b/myport.HTML
@@ -1,16 +1,6 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE.HTML>
+<HTML>
 <body>
-<h2>My skills</h2>
-
-<p>This is images shows Mordecai perfroming his duties in Multimedia field and Health field.</p>
-
-<button onclick="document.getElementById('myImage').src='m1.jpg'">Mordecai on camera</button>
-
-<img id="myImage" src="pic_bulboff.gif" style="width:100px">
-
-<button onclick="document.getElementById('myImage').src='m2.jpg'">Mordecai wearing lab coat</button>
-
 <!-- contact section-->
     <section id="contact">
         <div class="container mt-3 contactContent">
